@@ -1,5 +1,7 @@
 2002-02-07  Ian Lance Taylor  <ian@airs.com>
 
+	* uucp.c (uccopy): Add fforcelocal option.  Change all callers.
+
 	* protz.c (fzwait): Remove unreachable return statement.
 
 	* unix/lock.c (fsdo_lock): Test for error when removing read only
